# rich-cards

./: .envrc  .gitignore  README.md  flake-example.nix  flake.nix  pyproject.toml
scripts/: update_generated_docs.py
src/rich_card/: __init__.py  cli.py  config.py  errors.py  images.py  options.py  renderer_options.py  runtime.py  svg.py  svg_fragments.py  svg_markup.py  svg_syntax.py
src/rich_cards/: __init__.py  cli.py  svg.py
tests/: cli_helpers.py  test_cli.py  test_cli_config.py  test_cli_errors.py  test_cli_images.py  test_cli_inputs.py  test_cli_options.py  test_config.py  test_images.py  test_options.py  test_runtime.py  test_svg.py  test_svg_text.py  test_update_generated_docs.py
