[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"

[project]
name = "rich-card"
version = "0.1.0"
description = "Render syntax-highlighted code cards on polished gradient SVG backgrounds."
readme = "README.md"
authors = [
  {name = "Jakob Stender Guldberg", email = "jakob1379@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
  "click>=8.4.1",
  "defusedxml>=0.7.1",
  "pygments>=2.20.0",
  "rich>=15.0.0",
  "typer>=0.26.7"
]

[project.scripts]
rich-card = "rich_card.cli:app"
